--- a/requirements.txt
+++ b/requirements.txt
@@ -48,19 +48,19 @@ multidict==6.4.3
 mypy_extensions==1.1.0
 networkx==3.4.2
 numpy==2.2.5
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-cusparselt-cu12==0.6.2
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
+# nvidia-cublas-cu12==12.4.5.8
+# nvidia-cuda-cupti-cu12==12.4.127
+# nvidia-cuda-nvrtc-cu12==12.4.127
+# nvidia-cuda-runtime-cu12==12.4.127
+# nvidia-cudnn-cu12==9.1.0.70
+# nvidia-cufft-cu12==11.2.1.3
+# nvidia-curand-cu12==10.3.5.147
+# nvidia-cusolver-cu12==11.6.1.9
+# nvidia-cusparse-cu12==12.3.1.170
+# nvidia-cusparselt-cu12==0.6.2
+# nvidia-nccl-cu12==2.21.5
+# nvidia-nvjitlink-cu12==12.4.127
+# nvidia-nvtx-cu12==12.4.127
 openai==1.75.0
 orjson==3.10.16
 packaging==24.2
@@ -101,7 +101,7 @@ tomli==2.2.1
 torch==2.6.0
 tqdm==4.67.1
 transformers==4.51.3
-triton==3.2.0
+# triton==3.2.0
 typing-inspect==0.9.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
