--- a/alembic.ini
+++ b/alembic.ini
@@ -85,7 +85,9 @@ path_separator = os
 # other means of configuring database URLs may be customized within the env.py
 # file.
 ; sqlalchemy.url = driver://user:pass@localhost/dbname
-sqlalchemy.url = mysql+pymysql://root:nsw71_123@localhost/unichatdb
+
+
+sqlalchemy.url = postgresql://postgres.fijpxsecdqseiiofoxrh:unichat@aws-0-us-east-2.pooler.supabase.com:5432/postgres
 
 
 [post_write_hooks]
