--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-﻿accelerate==1.8.0
+﻿pydantic[email]
+email-validator
+accelerate==1.8.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.18
 aiosignal==1.3.2
